--- a/index.html
+++ b/index.html
@@ -23,51 +23,110 @@
     <input type="text" id="description" placeholder="Short Description" required>
     <textarea id="code" rows="6" placeholder="Paste your code here..." required></textarea>
     <input type="url" id="image" placeholder="Paste dry run image link (optional)">
-    <button type="submit">Submit Code</button>
+    
   </form>
+  <!-- Buttons -->
+<button id="submitBtn" type="button" onclick="addCode()">Submit</button>
+<button id="updateBtn" type="button" style="display:none;">Update</button>
+
+<!-- Where all codes will appear -->
+<div id="codeList"></div>
+
 
   <div id="output"></div>
 
   <script>
-    const scriptURL = "https://script.google.com/macros/s/AKfycbyB2p2AZJAsL1cGsP6yozie_1VXhbT0IJea9i-5hlqyrpRHcprZJ4WfUtBYrAUA-ulWIQ/exec";
+const apiUrl = "https://script.google.com/macros/s/AKfycbyB2p2AZJAsL1cGsP6yozie_1VXhbT0IJea9i-5hlqyrpRHcprZJ4WfUtBYrAUA-ulWIQ/exec"; // paste your new Apps Script web app URL
 
-    document.getElementById("codeForm").addEventListener("submit", async e => {
-      e.preventDefault();
-      const data = {
-        name: document.getElementById("name").value,
-        description: document.getElementById("description").value,
-        code: document.getElementById("code").value,
-        image: document.getElementById("image").value
-      };
+// Fetch and show all codes
+async function loadCodes() {
+  const res = await fetch(apiUrl);
+  const data = await res.json();
 
-      await fetch(scriptURL, {
-        method: "POST",
-        body: JSON.stringify(data)
-      }).then(res => alert("Code submitted successfully!"))
-      .catch(err => alert("Error submitting code!"));
-      
-      loadData();
-    });
+  const container = document.getElementById("codeList");
+  container.innerHTML = "";
 
-    async function loadData() {
-      const res = await fetch(scriptURL);
-      const entries = await res.json();
-      const output = document.getElementById("output");
-      output.innerHTML = "";
-      entries.reverse().forEach(entry => {
-        output.innerHTML += `
-          <div class="card">
-            <h3>${entry.name}</h3>
-            <p><strong>${entry.description}</strong></p>
-            <pre>${entry.code}</pre>
-            ${entry.image ? `<img src="${entry.image}" alt="Dry Run">` : ""}
-          </div>`;
-      });
-    }
+  data.forEach((item) => {
+    const div = document.createElement("div");
+    div.className = "code-card";
+    div.innerHTML = `
+      <h3>${item.name}</h3>
+      <p>${item.description}</p>
+      <pre>${item.code}</pre>
+      <img src="${item.image}" width="150" style="border-radius:10px"/>
+      <br>
+      <button onclick="editCode(${item.id}, '${item.name}', '${item.description}', \`${item.code}\`, '${item.image}')">✏️ Edit</button>
+      <button onclick="deleteCode(${item.id})">🗑️ Delete</button>
+    `;
+    container.appendChild(div);
+  });
+}
 
-    loadData();
-  </script>
+// Add new code
+async function addCode() {
+  const name = document.getElementById("name").value;
+  const description = document.getElementById("description").value;
+  const code = document.getElementById("code").value;
+  const image = document.getElementById("image").value;
+
+  const formData = new FormData();
+  formData.append("action", "add");
+  formData.append("name", name);
+  formData.append("description", description);
+  formData.append("code", code);
+  formData.append("image", image);
+
+  await fetch(apiUrl, { method: "POST", body: formData });
+  alert("Code added!");
+  loadCodes();
+  document.getElementById("codeForm").reset();
+}
+
+// Edit existing code
+async function editCode(id, name, description, code, image) {
+  document.getElementById("name").value = name;
+  document.getElementById("description").value = description;
+  document.getElementById("code").value = code;
+  document.getElementById("image").value = image;
+
+  document.getElementById("submitBtn").style.display = "none";
+  document.getElementById("updateBtn").style.display = "inline";
+  document.getElementById("updateBtn").onclick = async function() {
+    const formData = new FormData();
+    formData.append("action", "edit");
+    formData.append("id", id);
+    formData.append("name", document.getElementById("name").value);
+    formData.append("description", document.getElementById("description").value);
+    formData.append("code", document.getElementById("code").value);
+    formData.append("image", document.getElementById("image").value);
+
+    await fetch(apiUrl, { method: "POST", body: formData });
+    alert("Updated!");
+    document.getElementById("codeForm").reset();
+    document.getElementById("submitBtn").style.display = "inline";
+    document.getElementById("updateBtn").style.display = "none";
+    loadCodes();
+  };
+}
+
+// Delete code
+async function deleteCode(id) {
+  if (!confirm("Are you sure you want to delete this?")) return;
+
+  const formData = new FormData();
+  formData.append("action", "delete");
+  formData.append("id", id);
+
+  await fetch(apiUrl, { method: "POST", body: formData });
+  alert("Deleted!");
+  loadCodes();
+}
+
+loadCodes();
+</script>
+
 </body>
 </html>
+
 
 
