--- a/index.html
+++ b/index.html
@@ -18,92 +18,87 @@
 <body>
   <h2>👩‍💻 Team Code Wall 👨‍💻</h2>
 
-  <form id="codeForm">
-    <input type="hidden" id="editId" />
-    <input type="text" id="name" placeholder="Your Name" required />
-    <input type="text" id="description" placeholder="Short Description" required />
-    <textarea id="code" rows="6" placeholder="Paste your code here..." required></textarea>
-    <input type="url" id="image" placeholder="Paste dry run image link (optional)" />
-    <button type="submit">Submit Code</button>
-  </form>
+ <form id="codeForm">
+  <input type="hidden" id="editId">
+  <input type="text" id="name" placeholder="Your Name" required>
+  <textarea id="description" placeholder="Description"></textarea>
+  <textarea id="code" placeholder="Paste your code here" required></textarea>
+  <input type="text" id="image" placeholder="Image URL (optional)">
+  <button type="submit">Submit</button>
+</form>
 
-  <div id="codeList"></div>
+<div id="codeList"></div>
 
-  <script>
-    const apiUrl = "https://script.google.com/macros/s/AKfycbyB2p2AZJAsL1cGsP6yozie_1VXhbT0IJea9i-5hlqyrpRHcprZJ4WfUtBYrAUA-ulWIQ/exec"; // 👈 replace with your Apps Script URL
+<script>
+const apiUrl = "https://script.google.com/macros/s/AKfycbyB2p2AZJAsL1cGsP6yozie_1VXhbT0IJea9i-5hlqyrpRHcprZJ4WfUtBYrAUA-ulWIQ/exec";
 
-    async function loadCodes() {
-      const res = await fetch(apiUrl);
-      const data = await res.json();
+async function loadCodes() {
+  const res = await fetch(apiUrl);
+  const data = await res.json();
+  const container = document.getElementById("codeList");
+  container.innerHTML = "";
+  data.forEach(item => {
+    const div = document.createElement("div");
+    div.className = "code-card";
+    div.innerHTML = `
+      <h3>${item.name}</h3>
+      <p>${item.description}</p>
+      <pre>${item.code}</pre>
+      ${item.image ? `<img src="${item.image}" />` : ""}
+      <button onclick="editCode(${item.id}, '${item.name}', '${item.description}', \`${item.code}\`, '${item.image || ""}')">✏️ Edit</button>
+      <button onclick="deleteCode(${item.id})">🗑️ Delete</button>
+    `;
+    container.appendChild(div);
+  });
+}
 
-      const container = document.getElementById("codeList");
-      container.innerHTML = "";
+document.getElementById("codeForm").addEventListener("submit", async (e) => {
+  e.preventDefault();
+  const id = document.getElementById("editId").value;
+  const name = document.getElementById("name").value;
+  const description = document.getElementById("description").value;
+  const code = document.getElementById("code").value;
+  const image = document.getElementById("image").value;
 
-      data.forEach((item) => {
-        const div = document.createElement("div");
-        div.className = "code-card";
-        div.innerHTML = `
-          <h3>${item.name}</h3>
-          <p>${item.description}</p>
-          <pre>${item.code}</pre>
-          ${item.image ? `<img src="${item.image}" />` : ""}
-          <br />
-          <button onclick="editCode(${item.id}, '${item.name}', '${item.description}', \`${item.code}\`, '${item.image || ""}')">✏️ Edit</button>
-          <button onclick="deleteCode(${item.id})">🗑️ Delete</button>
-        `;
-        container.appendChild(div);
-      });
-    }
+  const formData = new FormData();
+  formData.append("name", name);
+  formData.append("description", description);
+  formData.append("code", code);
+  formData.append("image", image);
+  formData.append("action", id ? "edit" : "add");
+  if (id) formData.append("id", id);
 
-    document.getElementById("codeForm").addEventListener("submit", async (e) => {
-      e.preventDefault();
-      const id = document.getElementById("editId").value;
-      const name = document.getElementById("name").value;
-      const description = document.getElementById("description").value;
-      const code = document.getElementById("code").value;
-      const image = document.getElementById("image").value;
+  const res = await fetch(apiUrl, { method: "POST", body: formData });
+  const text = await res.text();
+  alert(text);
+  e.target.reset();
+  document.getElementById("editId").value = "";
+  loadCodes();
+});
 
-      const formData = new FormData();
-      formData.append("name", name);
-      formData.append("description", description);
-      formData.append("code", code);
-      formData.append("image", image);
+async function editCode(id, name, description, code, image) {
+  document.getElementById("editId").value = id;
+  document.getElementById("name").value = name;
+  document.getElementById("description").value = description;
+  document.getElementById("code").value = code;
+  document.getElementById("image").value = image;
+}
 
-      if (id) {
-        formData.append("action", "edit");
-        formData.append("id", id);
-      } else {
-        formData.append("action", "add");
-      }
+async function deleteCode(id) {
+  if (!confirm("Delete this code?")) return;
+  const formData = new FormData();
+  formData.append("action", "delete");
+  formData.append("id", id);
+  const res = await fetch(apiUrl, { method: "POST", body: formData });
+  const text = await res.text();
+  alert(text);
+  loadCodes();
+}
 
-      await fetch(apiUrl, { method: "POST", body: formData });
-      alert(id ? "Code updated!" : "Code added!");
-      e.target.reset();
-      document.getElementById("editId").value = "";
-      loadCodes();
-    });
+loadCodes();
+</script>
 
-    async function editCode(id, name, description, code, image) {
-      document.getElementById("editId").value = id;
-      document.getElementById("name").value = name;
-      document.getElementById("description").value = description;
-      document.getElementById("code").value = code;
-      document.getElementById("image").value = image;
-    }
-
-    async function deleteCode(id) {
-      if (!confirm("Are you sure you want to delete this code?")) return;
-      const formData = new FormData();
-      formData.append("action", "delete");
-      formData.append("id", id);
-
-      await fetch(apiUrl, { method: "POST", body: formData });
-      alert("Code deleted!");
-      loadCodes();
-    }
-
-    loadCodes();
-  </script>
 </body>
 </html>
+
 
