--- a/index.html
+++ b/index.html
@@ -1,173 +1,113 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Team Code Wall</title>
   <style>
-    body {
-      font-family: Arial, sans-serif;
-      background: #f9f9f9;
-      margin: 30px;
-    }
-    h2 {
-      text-align: center;
-      color: #333;
-    }
-    form {
-      background: #fff;
-      padding: 20px;
-      border-radius: 10px;
-      box-shadow: 0 0 10px #ccc;
-      max-width: 600px;
-      margin: 20px auto;
-    }
-    input, textarea {
-      width: 100%;
-      margin: 10px 0;
+    body { font-family: Arial; padding: 20px; }
+    .code-card {
+      background: #f3f3f3;
       padding: 10px;
-      border: 1px solid #ccc;
-      border-radius: 5px;
-    }
-    button {
-      background: #007BFF;
-      color: white;
-      border: none;
-      padding: 10px 15px;
-      border-radius: 5px;
-      cursor: pointer;
-      margin-right: 10px;
-    }
-    button:hover {
-      background: #0056b3;
-    }
-    .card {
-      background: white;
-      padding: 15px;
       border-radius: 10px;
-      margin: 15px auto;
-      max-width: 600px;
-      box-shadow: 0 0 8px #ccc;
+      margin-bottom: 15px;
     }
-    pre {
-      background: #f0f0f0;
-      padding: 10px;
-      border-radius: 5px;
-      overflow-x: auto;
-    }
-    img {
-      max-width: 100%;
-      border-radius: 5px;
-      margin-top: 10px;
-    }
+    pre { background: #222; color: #fff; padding: 10px; border-radius: 5px; }
+    button { margin-right: 8px; padding: 5px 10px; }
   </style>
 </head>
-
 <body>
-  <h2>👩‍💻 Team Code Wall 👨‍💻</h2>
+  <h2>Team Code Wall 🧩</h2>
 
-  <!-- Input form -->
   <form id="codeForm">
-    <input type="hidden" id="id">
-    <input type="text" id="name" placeholder="Your Name" required>
-    <input type="text" id="description" placeholder="Short Description" required>
-    <textarea id="code" rows="6" placeholder="Paste your code here..." required></textarea>
-    <input type="url" id="image" placeholder="Paste dry run image link (optional)">
-    <button type="button" onclick="addCode()">Submit Code</button>
-    <button type="button" id="updateBtn" style="display:none;">Update</button>
+    <input type="hidden" id="id" />
+    <input type="text" id="name" placeholder="Your Name" required><br><br>
+    <input type="text" id="description" placeholder="Description" required><br><br>
+    <textarea id="code" placeholder="Paste your code here" rows="6" required></textarea><br><br>
+    <input type="text" id="image" placeholder="Image URL (optional)"><br><br>
+    <button type="submit">Submit</button>
   </form>
 
-  <!-- Display codes -->
-  <div id="codeList"></div>
+  <hr>
+  <div id="dataList"></div>
 
   <script>
-    const apiUrl = "https://script.google.com/macros/s/AKfycbyB2p2AZJAsL1cGsP6yozie_1VXhbT0IJea9i-5hlqyrpRHcprZJ4WfUtBYrAUA-ulWIQ/exec";  // <-- replace with your Google Apps Script Web App URL
+    const scriptURL = "PASTE_YOUR_WEB_APP_URL_HERE";
 
-    // Load all codes from the sheet
-    async function loadCodes() {
-      const res = await fetch(apiUrl);
-      const data = await res.json();
-      const container = document.getElementById("codeList");
-      container.innerHTML = "";
-
-      data.forEach(item => {
-        const div = document.createElement("div");
-        div.className = "card";
-        div.innerHTML = `
-          <h3>${item.name}</h3>
-          <p>${item.description}</p>
-          <pre>${item.code}</pre>
-          ${item.image ? `<img src="${item.image}" alt="Dry run image">` : ""}
-          <br>
-          <button onclick="editCode(${item.id}, '${item.name}', '${item.description}', \`${item.code.replace(/`/g, '\\`')}\`, '${item.image}')">✏️ Edit</button>
-          <button onclick="deleteCode(${item.id})">🗑️ Delete</button>
-        `;
-        container.appendChild(div);
-      });
-    }
-
-    // Add a new code
-    async function addCode() {
+    // 🟢 Submit / Edit Form
+    document.getElementById("codeForm").addEventListener("submit", async (e) => {
+      e.preventDefault();
+      const id = document.getElementById("id").value;
       const name = document.getElementById("name").value;
       const description = document.getElementById("description").value;
       const code = document.getElementById("code").value;
       const image = document.getElementById("image").value;
 
       const formData = new FormData();
-      formData.append("action", "add");
+      formData.append("action", id ? "edit" : "add");
+      formData.append("id", id);
       formData.append("name", name);
       formData.append("description", description);
       formData.append("code", code);
       formData.append("image", image);
 
-      await fetch(apiUrl, { method: "POST", body: formData });
-      document.getElementById("codeForm").reset();
-      loadCodes();
+      const response = await fetch(scriptURL, { method: "POST", body: formData });
+      alert(await response.text());
+      loadData();
+      e.target.reset();
+      document.getElementById("id").value = "";
+    });
+
+    // 🔁 Load Data from Google Sheet
+    async function loadData() {
+      const res = await fetch(scriptURL + "?action=get");
+      const text = await res.text();
+      try {
+        const data = JSON.parse(text);
+        const container = document.getElementById("dataList");
+        container.innerHTML = "";
+        data.slice(1).forEach(row => {
+          if (row[0]) {
+            const div = document.createElement("div");
+            div.className = "code-card";
+            div.innerHTML = `
+              <strong>${row[1]}</strong> - ${row[2]}<br>
+              <pre>${row[3]}</pre>
+              ${row[4] ? `<img src="${row[4]}" width="100"><br>` : ""}
+              <button onclick="editEntry('${row[0]}','${row[1]}','${row[2]}',\`${row[3].replace(/`/g, "\\`")}\`,'${row[4] || ""}')">Edit</button>
+              <button onclick="deleteEntry('${row[0]}')">Delete</button>
+            `;
+            container.appendChild(div);
+          }
+        });
+      } catch (e) {
+        console.error("Error loading data:", text);
+      }
     }
 
-    // Edit existing code
-    function editCode(id, name, description, code, image) {
+    // 🟡 Edit Function
+    function editEntry(id, name, description, code, image) {
       document.getElementById("id").value = id;
       document.getElementById("name").value = name;
       document.getElementById("description").value = description;
       document.getElementById("code").value = code;
       document.getElementById("image").value = image;
+      window.scrollTo({ top: 0, behavior: "smooth" });
+    }
 
-      document.querySelector("button[onclick='addCode()']").style.display = "none";
-      document.getElementById("updateBtn").style.display = "inline";
-
-      document.getElementById("updateBtn").onclick = async function() {
+    // 🔴 Delete Function
+    async function deleteEntry(id) {
+      if (confirm("Are you sure you want to delete this entry?")) {
         const formData = new FormData();
-        formData.append("action", "edit");
+        formData.append("action", "delete");
         formData.append("id", id);
-        formData.append("name", document.getElementById("name").value);
-        formData.append("description", document.getElementById("description").value);
-        formData.append("code", document.getElementById("code").value);
-        formData.append("image", document.getElementById("image").value);
-
-        await fetch(apiUrl, { method: "POST", body: formData });
-        document.getElementById("codeForm").reset();
-        document.querySelector("button[onclick='addCode()']").style.display = "inline";
-        document.getElementById("updateBtn").style.display = "none";
-        loadCodes();
-      };
+        const response = await fetch(scriptURL, { method: "POST", body: formData });
+        alert(await response.text());
+        loadData();
+      }
     }
 
-    // Delete code
-    async function deleteCode(id) {
-      const formData = new FormData();
-      formData.append("action", "delete");
-      formData.append("id", id);
-
-      await fetch(apiUrl, { method: "POST", body: formData });
-      loadCodes();
-    }
-
-    // Load all codes when the page starts
-    loadCodes();
+    loadData();
   </script>
 </body>
 </html>
-
-
-
-
