--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   <div id="dataList"></div>
 
   <script>
-    const scriptURL = "PASTE_YOUR_WEB_APP_URL_HERE";
+    const scriptURL = "https://script.google.com/macros/s/AKfycbyB2p2AZJAsL1cGsP6yozie_1VXhbT0IJea9i-5hlqyrpRHcprZJ4WfUtBYrAUA-ulWIQ/exec";
 
     // 🟢 Submit / Edit Form
     document.getElementById("codeForm").addEventListener("submit", async (e) => {
@@ -111,3 +111,4 @@
   </script>
 </body>
 </html>
+
