--- a/index.html
+++ b/index.html
@@ -1,114 +1,118 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
   <title>Team Code Wall</title>
   <style>
-    body { font-family: Arial; padding: 20px; }
-    .code-card {
-      background: #f3f3f3;
-      padding: 10px;
-      border-radius: 10px;
-      margin-bottom: 15px;
-    }
-    pre { background: #222; color: #fff; padding: 10px; border-radius: 5px; }
-    button { margin-right: 8px; padding: 5px 10px; }
+    body { font-family: Arial; background: #f7f7f7; margin: 40px; }
+    h2 { text-align: center; }
+    form { background: white; padding: 20px; border-radius: 10px; box-shadow: 0 0 10px #ccc; max-width: 600px; margin: 20px auto; }
+    input, textarea { width: 100%; margin: 10px 0; padding: 10px; border: 1px solid #ccc; border-radius: 5px; }
+    button { background: #007BFF; color: white; border: none; padding: 10px 15px; border-radius: 5px; cursor: pointer; }
+    button:hover { background: #0056b3; }
+    .card { background: white; padding: 15px; border-radius: 10px; margin: 10px auto; max-width: 600px; box-shadow: 0 0 8px #ccc; }
+    pre { background: #eee; padding: 10px; border-radius: 5px; overflow-x: auto; }
+    img { max-width: 100%; border-radius: 5px; margin-top: 10px; }
+    .actions { margin-top: 10px; }
+    .actions button { margin-right: 5px; }
   </style>
 </head>
 <body>
-  <h2>Team Code Wall 🧩</h2>
+  <h2>👩‍💻 Team Code Wall 👨‍💻</h2>
 
   <form id="codeForm">
-    <input type="hidden" id="id" />
-    <input type="text" id="name" placeholder="Your Name" required><br><br>
-    <input type="text" id="description" placeholder="Description" required><br><br>
-    <textarea id="code" placeholder="Paste your code here" rows="6" required></textarea><br><br>
-    <input type="text" id="image" placeholder="Image URL (optional)"><br><br>
-    <button type="submit">Submit</button>
+    <input type="hidden" id="editId">
+    <input type="text" id="name" placeholder="Your Name" required>
+    <input type="text" id="description" placeholder="Short Description" required>
+    <textarea id="code" rows="6" placeholder="Paste your code here..." required></textarea>
+    <input type="url" id="image" placeholder="Paste dry run image link (optional)">
+    <button type="submit" id="submitBtn">Submit Code</button>
   </form>
 
-  <hr>
-  <div id="dataList"></div>
+  <div id="codeList"></div>
 
   <script>
-    const scriptURL = "https://script.google.com/macros/s/AKfycbyB2p2AZJAsL1cGsP6yozie_1VXhbT0IJea9i-5hlqyrpRHcprZJ4WfUtBYrAUA-ulWIQ/exec";
+  // 🟢 Replace this with your actual deployed Apps Script web app URL:
+  const apiUrl = "https://script.google.com/macros/s/AKfycbyB2p2AZJAsL1cGsP6yozie_1VXhbT0IJea9i-5hlqyrpRHcprZJ4WfUtBYrAUA-ulWIQ/exec";
 
-    // 🟢 Submit / Edit Form
-    document.getElementById("codeForm").addEventListener("submit", async (e) => {
-      e.preventDefault();
-      const id = document.getElementById("id").value;
-      const name = document.getElementById("name").value;
-      const description = document.getElementById("description").value;
-      const code = document.getElementById("code").value;
-      const image = document.getElementById("image").value;
+  // Load all codes from Google Sheet
+  async function loadCodes() {
+    const res = await fetch(apiUrl);
+    const data = await res.json();
+    const container = document.getElementById("codeList");
+    container.innerHTML = "";
 
-      const formData = new FormData();
-      formData.append("action", id ? "edit" : "add");
-      formData.append("id", id);
-      formData.append("name", name);
-      formData.append("description", description);
-      formData.append("code", code);
-      formData.append("image", image);
-
-      const response = await fetch(scriptURL, { method: "POST", body: formData });
-      alert(await response.text());
-      loadData();
-      e.target.reset();
-      document.getElementById("id").value = "";
+    data.forEach((item) => {
+      const div = document.createElement("div");
+      div.className = "card";
+      div.innerHTML = `
+        <h3>${item.name}</h3>
+        <p>${item.description}</p>
+        <pre>${item.code}</pre>
+        ${item.image ? `<img src="${item.image}" alt="Dry Run Image">` : ""}
+        <div class="actions">
+          <button onclick="startEdit(${item.id}, '${escapeQuotes(item.name)}', '${escapeQuotes(item.description)}', \`${escapeBackticks(item.code)}\`, '${escapeQuotes(item.image)}')">✏️ Edit</button>
+          <button onclick="deleteCode(${item.id})">🗑️ Delete</button>
+        </div>
+      `;
+      container.appendChild(div);
     });
+  }
 
-    // 🔁 Load Data from Google Sheet
-    async function loadData() {
-      const res = await fetch(scriptURL + "?action=get");
-      const text = await res.text();
-      try {
-        const data = JSON.parse(text);
-        const container = document.getElementById("dataList");
-        container.innerHTML = "";
-        data.slice(1).forEach(row => {
-          if (row[0]) {
-            const div = document.createElement("div");
-            div.className = "code-card";
-            div.innerHTML = `
-              <strong>${row[1]}</strong> - ${row[2]}<br>
-              <pre>${row[3]}</pre>
-              ${row[4] ? `<img src="${row[4]}" width="100"><br>` : ""}
-              <button onclick="editEntry('${row[0]}','${row[1]}','${row[2]}',\`${row[3].replace(/`/g, "\\`")}\`,'${row[4] || ""}')">Edit</button>
-              <button onclick="deleteEntry('${row[0]}')">Delete</button>
-            `;
-            container.appendChild(div);
-          }
-        });
-      } catch (e) {
-        console.error("Error loading data:", text);
-      }
-    }
+  function escapeQuotes(str = "") {
+    return str.replace(/'/g, "\\'").replace(/"/g, "&quot;");
+  }
 
-    // 🟡 Edit Function
-    function editEntry(id, name, description, code, image) {
-      document.getElementById("id").value = id;
-      document.getElementById("name").value = name;
-      document.getElementById("description").value = description;
-      document.getElementById("code").value = code;
-      document.getElementById("image").value = image;
-      window.scrollTo({ top: 0, behavior: "smooth" });
-    }
+  function escapeBackticks(str = "") {
+    return str.replace(/`/g, "\\`");
+  }
 
-    // 🔴 Delete Function
-    async function deleteEntry(id) {
-      if (confirm("Are you sure you want to delete this entry?")) {
-        const formData = new FormData();
-        formData.append("action", "delete");
-        formData.append("id", id);
-        const response = await fetch(scriptURL, { method: "POST", body: formData });
-        alert(await response.text());
-        loadData();
-      }
-    }
+  // Add or Edit Code
+  document.getElementById("codeForm").addEventListener("submit", async (e) => {
+    e.preventDefault();
 
-    loadData();
+    const id = document.getElementById("editId").value;
+    const name = document.getElementById("name").value;
+    const description = document.getElementById("description").value;
+    const code = document.getElementById("code").value;
+    const image = document.getElementById("image").value;
+
+    const formData = new FormData();
+    formData.append("action", id ? "edit" : "add");
+    if (id) formData.append("id", id);
+    formData.append("name", name);
+    formData.append("description", description);
+    formData.append("code", code);
+    formData.append("image", image);
+
+    await fetch(apiUrl, { method: "POST", body: formData });
+    document.getElementById("codeForm").reset();
+    document.getElementById("editId").value = "";
+    loadCodes();
+  });
+
+  // Edit Code
+  function startEdit(id, name, description, code, image) {
+    document.getElementById("editId").value = id;
+    document.getElementById("name").value = name;
+    document.getElementById("description").value = description;
+    document.getElementById("code").value = code;
+    document.getElementById("image").value = image;
+    document.getElementById("submitBtn").innerText = "Update Code";
+  }
+
+  // Delete Code
+  async function deleteCode(id) {
+    if (!confirm("Delete this code?")) return;
+    const formData = new FormData();
+    formData.append("action", "delete");
+    formData.append("id", id);
+
+    await fetch(apiUrl, { method: "POST", body: formData });
+    loadCodes();
+  }
+
+  loadCodes();
   </script>
 </body>
 </html>
-
